# rusty-sunspec-collector

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: deploy-docs.yml
crates/avro-kafka/: Cargo.toml
crates/avro-kafka/src/: lib.rs
crates/avro-kafka/tests/: kafka_integration_tests.rs  serialize_tests.rs
crates/buffer/: Cargo.toml
crates/buffer/src/: lib.rs
crates/buffer/tests/: buffer_tests.rs
crates/collector-app/: Cargo.toml
crates/collector-app/src/: config.rs  lib.rs  main.rs
crates/collector-app/tests/: config_validation_tests.rs  e2e_harness_tests.rs
crates/collector-app/tests/fixtures/: config-invalid.toml  config-valid.json  config-valid.toml
crates/discovery/: Cargo.toml
crates/discovery/src/: lib.rs
crates/modbus-client/: Cargo.toml
crates/modbus-client/src/: lib.rs
crates/modbus-client/tests/: diagslave_tests.rs
crates/poller-actor/: Cargo.toml
crates/poller-actor/src/: lib.rs
crates/sunspec-parser/: Cargo.toml
crates/sunspec-parser/src/: lib.rs
crates/sunspec-parser/tests/: parser_tests.rs
crates/sunspec-parser/tests/fixtures/: models.json  models.xml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docker/: Dockerfile.arm64
docs/: SUMMARY.md  _config.yml  book.toml  buffer_maintenance.md  build.md  config.example.toml  index.md  ops.md  plan.md  sunspec-collector.env  sunspec-collector.service
docs/assets/: main.scss
