[package]
name = "avro-kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
apache-avro = { version = "0.16", features = ["derive"] }
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "tokio"] }

types = { path = "../types" }
