[package]
name = "collector-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

modbus-client = { path = "../modbus-client" }
sunspec-parser = { path = "../sunspec-parser" }
poller-actor = { path = "../poller-actor" }
avro-kafka = { path = "../avro-kafka" }
discovery = { path = "../discovery" }
buffer = { path = "../buffer" }
types = { path = "../types" }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"
