[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

types = { path = "../types" }

[features]
default = []
config = ["serde"]
