[package]
name = "modbus-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-modbus = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
default = []
config = ["serde"]
