[package]
name = "poller-actor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
metrics = "0.22"

modbus-client = { path = "../modbus-client" }
sunspec-parser = { path = "../sunspec-parser" }
types = { path = "../types" }
